invoice creation done througth manual submit dashboard connected to the back

--- a/invoicetracking/src/i18n/locales/en.json
+++ b/invoicetracking/src/i18n/locales/en.json
@@ -15,11 +15,53 @@
   "settings.title": "Settings",
   "settings.language": "Language",
   "settings.theme": "Theme",
+
+  "auth.service.name": "Service",
+  "nav.dashboard": "Dashboard",
+  "nav.settings": "Settings",
+  "nav.profile": "Profile",
+  "nav.invoices": "Invoices",
+  "nav.analytics": "Analytics",
+  "nav.users": "Users",
+  "nav.notifications": "Notifications",
+  "nav.report": "Reports",
+  "settings.language.english": "English",
+  "settings.language.french": "French",
+  "dashboard.stats.total_invoices": "Total Invoices",
+  "dashboard.stats.paid_invoices": "Paid Invoices",
+  "dashboard.stats.approved_invoices": "Approved Invoices",
+  "dashboard.stats.pending_approval": "Pending approval",
+  "dashboard.stats.overdue_invoices": "Overdue Invoices",
+  "dashboard.recent_activities": "Recent Activities",
+  "dashboard.hello": "Welcome",
+  "dashboard.dashboard.action_required": "Requires Action",
+  "dashboard.overview": "This is an overview of Invoice of the service",
+  "dashboard.total_amount": "Total Amount",
+  "dashboard.financial_amounts": "Financial Amount",
+  "dashboard.paid_amount": "Paid Amount",
+  "dashboard.pending_amount": "Pending Amount",
+  "dashboard.rejected_invoices": "Rejected Invoices",
+  "dashboard.status_distribution": "Status Distribution",
+  "invoice.status.paid": "Paid",
+  "invoice.status.pending": "Pending",
+  "invoice.status.overdue": "Overdue",
+  "invoice.status.rejected": "Rejected",
+  "invoice.status.draft": "Draft",
+  "invoice.create": "Create Invoice",
+  "invoice.edit": "Edit Invoice",
+  "invoice.status.in_payment": "In Payment",
+  "invoice.status.approved": "Approved",
+  "dashboard.attention_required": "Invoice Requiring Attention",
+  "dashboard.no_attention_needed": "No Invoice Needs Attention",
+  "dashboard.required_revision": "Requires Revision",
+  "dashboard.now": "Now",
+  "dashboard.recent": "Recent",
+  "dashboard.ongoing": "Ongoing",
   "settings.theme.light": "Light",
-  "settings.theme.dark": "Dark"
-  ,"errors.fill_all_fields": "Please fill in all fields"
-  ,"errors.invalid_credentials": "Incorrect email or password"
-  ,"errors.registration_failed": "Registration failed"
+  "settings.theme.dark": "Dark",
+  "errors.fill_all_fields": "Please fill in all fields",
+  "errors.invalid_credentials": "Incorrect email or password",
+  "errors.registration_failed": "Registration failed"
 }
 
 
