--- a/invoicetracking/src/i18n/locales/fr.json
+++ b/invoicetracking/src/i18n/locales/fr.json
@@ -10,16 +10,58 @@
   "auth.register.button": "Créer le compte",
   "auth.register.back": "Retour à la connexion",
   "nav.logout": "Déconnexion",
+
+  "auth.service.name": "Service",
+  "nav.dashboard": "Tableau de bord",
+  "nav.settings": "Paramètres",
+  "nav.profile": "Profil",
+  "nav.invoices": "Factures",
+  "nav.analytics": "Analytique",
+  "nav.users": "Utilisateurs",
+  "nav.notifications": "Notifications",
+  "nav.report": "Rapports",
+  "settings.language.english": "Anglais",
+  "settings.language.french": "Français",
+  "dashboard.stats.total_invoices": "Nombre total de factures",
+  "dashboard.stats.paid_invoices": "Factures payées",
+  "dashboard.stats.approved_invoices": "Factures approuvées",
+  "dashboard.stats.pending_approval": "En attente d'approbation",
+  "dashboard.stats.overdue_invoices": "Factures en retard",
+  "dashboard.recent_activities": "Activités récentes",
+  "dashboard.hello": "Bienvenue",
+  "dashboard.dashboard.action_required": "Action requise",
+  "dashboard.overview": "Ceci est un aperçu des factures du service",
+  "dashboard.total_earnings": "Gains totaux",
+  "dashboard.financial_amounts": "Montant financier",
+  "dashboard.paid_amount": "Montant payé",
+  "dashboard.pending_amount": "Montant en attente",
+  "dashboard.rejected_invoices": "Factures rejetées",
+  "dashboard.status_distribution": "Répartition par statut",
+  "invoice.status.paid": "Payée",
+  "invoice.status.pending": "En attente",
+  "invoice.status.overdue": "En retard",
+  "invoice.status.rejected": "Rejetée",
+  "invoice.status.draft": "Brouillon",
+  "invoice.create": "Créer une facture",
+  "invoice.edit": "Modifier la facture",
+  "invoice.status.in_payment": "En paiement",
+  "invoice.status.approved": "Approuvée",
+  "dashboard.attention_required": "Facture nécessitant une attention",
+  "dashboard.no_attention_needed": "Aucune facture ne nécessite d'attention",
+  "dashboard.required_revision": "Révision requise",
+  "dashboard.now": "Maintenant",
+  "dashboard.recent": "Récent",
+  "dashboard.ongoing": "En cours",
   "dashboard.welcome": "Bienvenue dans FactureFlow",
   "dashboard.subtitle": "Module d'authentification configuré avec succès.",
   "settings.title": "Paramètres",
   "settings.language": "Langue",
   "settings.theme": "Thème",
   "settings.theme.light": "Clair",
-  "settings.theme.dark": "Sombre"
-  ,"errors.fill_all_fields": "Veuillez remplir tous les champs"
-  ,"errors.invalid_credentials": "Email ou mot de passe incorrect"
-  ,"errors.registration_failed": "Une erreur est survenue lors de l'inscription"
+  "settings.theme.dark": "Sombre",
+  "errors.fill_all_fields": "Veuillez remplir tous les champs",
+  "errors.invalid_credentials": "Email ou mot de passe incorrect",
+  "errors.registration_failed": "Une erreur est survenue lors de l'inscription"
 }
 
 
